--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t cevher/DockerFrontEnd -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true cevher/DockerFrontEnd npm run test -- --coverage
+  - docker run -e CI=true cevher/DockerFrontEnd npm run test 
